# Yolov8_improve_Passion_detection_tensorrt

./: Brightness_Judgment.py  Dense.py  README.md  SmallTarget.py
Improved deployment of YOLOv8 edge devices/YOLO-Project/: YoloCap.py  custom_buttons.py  v5n.pt  yolov8.py
Improved deployment of YOLOv8 edge devices/YOLO-Project/UI/: page.ui
Improved deployment of YOLOv8 edge devices/tensorrt-yolov8/: CMakeLists.txt  main.cpp  toEngine.py  yolov8.cpp  yolov8.py
Improved deployment of YOLOv8 edge devices/tensorrt-yolov8/include/: yolov8.hpp
Improved deployment of YOLOv8 edge devices/yolov8-train/: delete.py  detect.py  toEngine.py  train.py  val.py
Improved deployment of YOLOv8 edge devices/yolov8-train/Divide-10-im/i/: args.yaml  results.csv
Improved deployment of YOLOv8 edge devices/yolov8-train/cfg/: yolov8-PA-p2-SlimNeck.yaml  yolov8-PA-p2.yaml  yolov8-PA.yaml
Improved deployment of YOLOv8 edge devices/yolov8-train/cfg/models/v8/: yolov8.yaml
Improved deployment of YOLOv8 edge devices/yolov8-train/nn/: tasks.py
Improved deployment of YOLOv8 edge devices/yolov8-train/nn/modules/: modules.py
Improved deployment of YOLOv8 edge devices/yolov8-train/runs/yolov8-PA/: args.yaml  results.csv  val.txt
Improved deployment of YOLOv8 edge devices/yolov8-train/runs/yolov8-PA-p2/: args.yaml  results.csv  val.txt
Improved deployment of YOLOv8 edge devices/yolov8-train/runs/yolov8n/: args.yaml  results.csv  val.txt
Improved deployment of YOLOv8 edge devices/yolov8-train/runs/yolov8n-im9/: args.yaml  results.csv
